sort.basic.lessons.sort.basic.bubble.AlgBubbleSort1.scala.error
AlgBubbleSort1:6: error: ')' expected but 'return' found.
			return ( echange ( i, i+1) )
                        ^AlgBubbleSort1:16: error: Unmatched closing brace '}' ignored here
}
^