sort.basic.lessons.sort.basic.bubble.AlgBubbleSort1.scala.code
def bubbleSort()  {
		for (i <- 0 to getNombreValeur() - 2) {
		do {
			if ( plusPetitQue( i , i+1 )
			return ( echange ( i, i+1) )
			}
		while ( plusPetitQue(i, i+1) ) 
		}
		
	}
}
